# nonebot2

./: .gitignore  LICENSE  README.md
zhuzhu/: .env.dev  .env.prod  Dockerfile  README.md  bot.py  pyproject.toml
zhuzhu/go-cqhttp-v0.9.40-fix4-windows-amd64/: config.hjson  config.yml  device.json
zhuzhu/go-cqhttp-v0.9.40-fix4-windows-amd64/data/leveldb/: 000006.ldb
zhuzhu/src/plugins/: ao.py  chengyu.py  diange.py  dingshi.py  huangli.py  setu.py  shanzhao.py  test.py  tianqi.py  xingzuo.py
